# navigation2_tutorials

nav2_gq7_demo/: package.xml  setup.cfg  setup.py
nav2_gq7_demo/config/: gq7.yml  nav2.yaml
nav2_gq7_demo/launch/: gq7_demo.launch.py  rviz.launch.py
nav2_gq7_demo/rviz/: navigation.rviz
nav2_gq7_demo/urdf/: test_robot.urdf.xacro
