<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_gq7_demo</name>
  <version>0.0.0</version>
  <description>Demo package for navigating with a MicroStrain GQ7</description>
  <maintainer email="rob.fisher@hbkworld.com">Rob Fisher</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>MIT</license>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend>
  <exec_depend>microstrain_inertial_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>